rnsc/test_data/integration/error/parser/type_hints/string/no_operand_recovers.rns
.class   @string ; no operand provided
blabla ; <- should be still reported as an error